hphp/hack/test/typecheck/typed_locals/lhs-errors.php.exp
File "lhs-errors.php", line 6, characters 3-17:
Illegal definition of typed local variable $x. (Naming[2126])
  File "lhs-errors.php", line 5, characters 9-10:
  It is already defined. Typed locals must have their type declared before they can be assigned.
